--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
 
   <h1>Hello world!</h1>
   <p>This is the first file in my new Git Repo.</p>
+  <p>I should have learnt Github earlier</p>
 
 </body>
 
-</html>
-<style></style>
-</head>
-
-<body></body>
 
 </html>
