Added 1st image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <h1>Hello world!</h1>
   <p>This is the first file in my new Git Repo.</p>
   <p>I should have learnt Github earlier</p>
+  <div><img src="/Users/Grace $Mercy/Desktop/CODING/Git/images/github.png"
+  alt="GitHub" style="width: 30px"></div>
+  <p>Learnig git will be fun</p>
 
 </body>
 
