--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h1>Hello world!</h1>
   <p>This is the first file in my new Git Repo.</p>
-  <p>I should have learnt Github earlier</p>
+  <p style="background-color: red;">I should have learnt Github earlier</p>
 
 </body>
 
