--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>This is the first file in my new Git Repo.</p>
   <p style="background-color: red;">I should have learnt Github earlier</p>
   <p>Learnig git will be fun</p>
-  <div><img src="/Users/Grace $Mercy/Desktop/CODING/Git/firstproject/github.png"
+  <div><img src="./images/github.png"
     alt="Github" style="width: 50px;"> </div>
   <div><img src="/Users/Grace $Mercy/Desktop/FAM.jpeg" style="width:300px" alt="fam"></div>
 
