--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p>Learnig git will be fun</p>
   <div><img src="github.png"
     alt="Github" style="width: 50px;"> </div>
-  <div><img src="/Users/Grace $Mercy/Desktop/FAM.jpeg" style="width:300px" alt="fam"></div>
+  <div><img src="NURU630.jpg" style="width:300px" alt="fam"></div>
 
 </body>
 
